--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <div class="navbar">
         <a href="#" style="font-size: xx-large; color: black; font-weight: bold;" id="logo">Bookstalgia</a>
         <a href="/">Home</a>
-        <a href="/new">Add New Book</a>
+        <a href="/new">Add a Book</a>
         <a href="#" id="info" onclick="about()">About</a>
     </div>
 </div>
