--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,6 +14,7 @@
 <div class="footer">
     <footer>Copyright 2024 Bookstalgia</footer>
 </div>
+ <script src="/styles/my.js"></script>
 <script>
     function about(){
         alert("This Website is built on node.js,expressJs, with Postgresql as database. Book cover obtained through openlibrary.org website/API. npm includes express, ejs, pg,axios,body-parser,etc")
