--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     
 <div class="container-navbar">
     <div class="navbar">
-        <a href="#" style="font-size: xx-large; color: black; font-weight: bold;" id="logo">Bookstalgia</a>
+        <a href="#" style="font-size: xx-large; color: black; font-weight: bold;" id="logo"><img src="/assets/book_svg.svg" alt="opened-book" height="30">Bookstalgia</a>
         <a href="/">Home</a>
         <a href="/new">Add a Book</a>
         <a href="#" id="info" onclick="about()">About</a>
