--- a/public/styles/mystyle.css
+++ b/public/styles/mystyle.css
@@ -57,7 +57,7 @@ body {
 .book-box img{
     margin-left: 5%;
     height: 270px;
-    width: auto;
+    width: 180px;;
     margin-bottom: 5%;
     border: none;
     border-radius: 10px;
@@ -82,6 +82,8 @@ body {
 }
 input{
     width: 100%;
+    height: 30px;
+    padding: 1px;
     border-radius: 4px;
 }
 textarea{
